# python-exercise

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
jupyter_notebooks/: business-logic.ipynb  exported_bl.py
